# drachtio-freeswitch-modules

./: .gitignore  mod_audio_cast.la
mcs/: Cargo.toml  README.md  build.rs  mcs.service
mcs-it/: Cargo.toml  build.rs
mcs-it/proto/: mcs.proto
mcs-it/resources/: output-left-mulaw.raw  output-right-mulaw.raw  output-segment-mulaw.raw  test-input-mulaw.raw  test-input-pcm16.raw
mcs-it/tests/: grpc_server.rs  integration_test.rs
mcs/config/: Production.toml  default.toml  development.toml  production.toml
mcs/src/: db_client.rs  fs_command_client.rs  fs_tcp_client.rs  http_client.rs  http_server.rs  main.rs  metrics.rs  settings.rs  udp_server.rs
mod_audio_cast/: audio_cast_helper.cpp  dispatcher.cpp  dispatcher.h  mod_audio_cast.h
modules/mod_audio_cast/: Makefile.am  README.md  audio_cast_helper.cpp  audio_cast_helper.h  consistence_hashing.cpp  consistence_hashing.h  dispatcher.cpp  dispatcher.h  mod_audio_cast.c  mod_audio_cast.h
modules/mod_audio_fork/: Makefile.am  audio_pipe.cpp  audio_pipe.hpp  lws_glue.cpp  mod_audio_fork.c
modules/mod_audio_stream/: Makefile.am  README.md  lws_glue.cpp  lws_glue.h  mod_audio_stream.c  mod_audio_stream.h
recorder/: Cargo.toml
recorder/proto/: mcs.proto
recorder/src/: main.rs
