[package]
name = "mcs-it"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.21"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.34"
uuid = { version = "1.0.7", features = ["v4"] }
tokio = { version = "1.35.0", features = ["net", "fs", "full"] }
serde_json = "1.0.113"

# for tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"