[package]
name = "mcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-util = { version = "0.3.29", features = ["sink"] }
http = "1.0.0"
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["net", "full"] }
tonic = "0.10.2"
warp = "0.3.6"
uuid = "0.8"

# for tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"

[build-dependencies]
tonic-build = "0.10.2"
