[package]
name = "mcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for payload streaming
async-stream = "0.3.5"

# for async runtime
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }

# for REST APIs
warp = "0.3.6"
uuid = {version = "1.7.0", features = ["v4", "fast-rng"]}
serde = {version = "1.0.197", features = ["derive"]}

# for grpc
prost = "0.12.3"
tonic = "0.10.2"

# for tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
package = "0.0.0"
chrono = "0.4.34"
serde_json = "1.0.114"

# for openapi doc
utoipa = "4.2.0"
utoipa-swagger-ui = "6.0.0"
http = "1.0.0"

# for config management
config = "0.10"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.10.2"
